--- a/Chalkable.Web/assets/sass2/3_molecules/_layout.sass
+++ b/Chalkable.Web/assets/sass2/3_molecules/_layout.sass
@@ -20,7 +20,7 @@ footer
   border: 1px solid #c8c7c3
   +box-shadow(transparentize(#000, .82) 0 2px 5px)
   vertical-align: top
-
+  position: relative
 
 #chlk-pop-up-container
   position: absolute
