--- a/Chalkable.Web/assets/sass2/3_molecules/_main.sass
+++ b/Chalkable.Web/assets/sass2/3_molecules/_main.sass
@@ -4,7 +4,7 @@
   vertical-align: top
 
   > div
-    margin: 0 49px 24px
+    margin: 27px 49px
 
     .page-title
       color: #2b2a28
@@ -13,3 +13,6 @@
       line-height: 66px
       margin: 0
       padding: 0
+
+      &:first-child
+        margin-top: -27px
