--- a/Chalkable.Web/assets/sass2/_shared.sass
+++ b/Chalkable.Web/assets/sass2/_shared.sass
@@ -17,6 +17,8 @@
 
 @import "2_atoms/avatar-wrapper"
 @import "2_atoms/chat-bubble"
+@import "2_atoms/buttons"
+@import "2_atoms/close-btn"
 
 @import "3_molecules/layout"
 @import "3_molecules/header"
@@ -25,5 +27,7 @@
 @import "3_molecules/classes-bar"
 @import "3_molecules/action-bar"
 @import "3_molecules/chlk-grid"
+@import "3_molecules/dialog"
+@import "3_molecules/loader-container"
 
 @import "7_controls/close-open-control"
