--- a/Chalkable.Web/assets/sass2/student.sass
+++ b/Chalkable.Web/assets/sass2/student.sass
@@ -1,6 +1,7 @@
 @import "shared"
 
 @import "2_atoms/feed-item"
+@import "2_atoms/attachments-and-applications"
 
 @import "4_pages/feed-list"
 @import "4_pages/announcement-view-page"
