--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementGradingTopPart.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementGradingTopPart.jade
@@ -3,7 +3,7 @@ autoCount = self.getAutoGradeCount()
     //do not delete this commented code ... we will need this later
     +ActionButton('announcement', 'applyAutoGrade', self.getAnnouncementId())(disabled = autoCount == 0).green-button= Msg.Auto_grade
     +ActionButton('announcement', 'applyManualGrade', self.getAnnouncementId())(disabled = autoCount == 0).blue-button= Msg.Grade_manually
-.section= Msg.Class_Avg + ': ' +self.getClassAvg()
+.section= Msg.Class_Avg + ': ' + (self.getClassAvg() != null ? self.getClassAvg() : 'N/A')
 .section= self.getGradedStudentCount() + '/' + self.getItems().length + ' ' + Msg.Graded
 .section.x-hidden= Msg.Show_grades_to_students
 .section(class=self.isShowToStudents() ? "" : "not-show", data-value="#{self.isShowToStudents()}").show-student-grades.x-hidden
