--- a/Chalkable.Web/assets/jade/controls/date-picker.jade
+++ b/Chalkable.Web/assets/jade/controls/date-picker.jade
@@ -1,3 +1,3 @@
 mixin DatePicker(name, value_)
     -attributes = self.processAttrs(name, value_, attributes)
-    input(attributes)
+    input(type="text")(attributes)
