--- a/Chalkable.Web/assets/sass2/1_quarks/_button.sass
+++ b/Chalkable.Web/assets/sass2/1_quarks/_button.sass
@@ -1,4 +1,4 @@
-button, input[type=button], input[type=submit], input[type=reset]
+button, input[type=button], input[type=submit], input[type=reset], input[type="file"], .file
   outline: none
   border-radius: 3px
   border: 1px solid #c8c7c3
@@ -8,10 +8,11 @@ button, input[type=button], input[type=submit], input[type=reset]
 
   font-family: 'Open Sans', sanf-serif
   font-size: 13px
-  line-height: 29px
+  line-height: 28px
   font-weight: 600
   color: #56554f
   +text-shadow(transparentize(#fff, .5) 0 1px 0px)
+  text-align: center
 
   padding: 0 10px
   cursor: pointer
@@ -44,3 +45,15 @@ button, input[type=button], input[type=submit], input[type=reset]
 
 
 
+.file
+  position: relative
+  z-index: 0
+  overflow: hidden
+
+  INPUT
+    opacity: 0
+    position: absolute
+    top: 0
+    left: 0
+    z-index: 1
+    cursor: pointer
