--- a/Chalkable.Web/assets/sass2/1_quarks/_input.sass
+++ b/Chalkable.Web/assets/sass2/1_quarks/_input.sass
@@ -5,6 +5,7 @@ input[type=text], select, textarea
   color: #2b2a28
   outline: none
   +text-shadow(transparentize(#fff, .25) 0 1px 0px)
+  font-family: 'Open Sans', sanf-serif
 
   &[readonly]
     color: #aba9a5
