--- a/Chalkable.Web/assets/sass2/4_pages/_announcement-view-page.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_announcement-view-page.sass
@@ -24,15 +24,6 @@
   .standards-container
     margin-top: 24px
 
-  .attachments-and-applications, .attachments-container
-    .attachment, .application
-      border-radius: 3px
-      background: #fff
-      border: 1px solid #c8c7c3
-      display: inline-block
-      margin-right: 20px
-      padding: 18px
-
   .questions-and-answers .row
     margin-top: 24px
 
@@ -131,11 +122,20 @@
     .row
       border-bottom: 1px solid #e7e6e2
       padding: 15px
+      z-index: 8
+      position: relative
+
+      &.selected
+        +box-shadow(transparentize(#000, .82) 0 0 5px)
+        z-index: 10
 
     .attachments-container
       display: none
       background: #f7f7f5
       border-bottom: 1px solid #c8c7c3
+      z-index: 7
+      position: relative
+
 
   .row:not(.readonly) .selected
     display: none
@@ -197,6 +197,9 @@
       width: 85px
       text-align: center
 
+      &.dropped
+        text-decoration: line-through
+
     .text-value, input[type=text]
       font-size: 20px
       font-weight: 600
@@ -216,15 +219,26 @@
       width: 85px
       text-align: center
 
+  .loading .grade-block .text-value
+    font-size: 0
+    background: image-url("images/loader.gif") 50% 50% no-repeat
+    height: 20px
+
   .grading-input-popup.chlk-pop-up-container
     position: absolute
     display: none
     padding: 12px
     text-align: left
-    left: -35px
-    top: 65px
+    left: -15px
+    top: 45px
     white-space: normal !important
+    line-height: 24px
+    +box-shadow(transparentize(#000, .8) 0 0 16px)
+    width: 100px
 
+    &::before
+      left: 50%
+      margin-left: -7px
 
   .attachments-container
-    padding: 30px
+    padding: 30px 10px 30px 30px
