--- a/Chalkable.Web/assets/sass2/teacher.sass
+++ b/Chalkable.Web/assets/sass2/teacher.sass
@@ -1,6 +1,10 @@
 @import "shared"
 
 @import "2_atoms/feed-item"
+@import "2_atoms/attachments-and-applications"
 
 @import "4_pages/feed-list"
 @import "4_pages/announcement-view-page"
+@import "4_pages/announcement-form-page"
+
+@import "5_dialogs/add-standards-dialog"
