--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
@@ -84,13 +84,12 @@ mixin Glue_()
                     )
 
         if self.getUserRole().isStudent()
-            .silver-panel.attachments-panel
-                .left-block.attachments
-                .right-block
-                    .student-attachments
-                        +RenderWith(self.getModel(), chlk.templates.announcement.AnnouncementForStudentAttachments)(
-                            userRole = self.getUserRole()
-                        )
+            .close-open-control
+                h3 Attachments
+                .student-attachments.content
+                    +RenderWith(self.getModel(), chlk.templates.announcement.AnnouncementForStudentAttachments)(
+                        userRole = self.getUserRole()
+                    )
 
         +RenderWith(self.getModel(), chlk.templates.announcement.AnnouncementQnAs)(
             userRole = self.getUserRole()
