--- a/Chalkable.Web/assets/sass2/4_pages/_announcement-view-page.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_announcement-view-page.sass
@@ -242,3 +242,20 @@
 
   .attachments-container
     padding: 30px 10px 30px 30px
+
+  .comment-grade-container
+    background: #f8e6a5
+    border-radius: 5px
+    padding: 16px
+    line-height: 60px - 32px
+    overflow: hidden
+    margin-bottom: 16px
+
+    .grade-value
+      background: #2f7790
+      line-height: 60px
+      padding: 0 20px
+      font-family: 'Reenie Beanie', serif
+      font-size: 34pt
+      color: #fff
+      margin: -16px -16px -16px 0
