--- a/Chalkable.Web/assets/sass2/_shared.sass
+++ b/Chalkable.Web/assets/sass2/_shared.sass
@@ -30,4 +30,6 @@
 @import "3_molecules/dialog"
 @import "3_molecules/loader-container"
 
+@import "6_popups/list-new-popup"
+
 @import "7_controls/close-open-control"
