--- a/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
@@ -18,6 +18,7 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
     isAdminAnnouncement = adminRecipients && self.getUserRole().isAdmin()
     isAnnouncement = (announcement.isStandartAnnouncement() || isAdminAnnouncement)
     disableDeleteBtn = announcement.getGradingStudentsCount() > 0
+    standards = announcement.getStandards() || []
     if !isAdminAnnouncement
         +ActionLink('announcement', 'showTitlePopUp')#show-title-popup.x-hidden
         div(class=announcement.getExpiresDate() ? 'with-date' : '').title-block-container
@@ -44,16 +45,16 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
                     +RenderWith(adminRecipients, chlk.templates.announcement.AdminRecipients)
             .left-block-container
                 +TextArea(name="content", placeholder=isAnnouncement ? "Message" : "Assignment")= announcement.getContent()
-                if !isAdminAnnouncement && announcement.isCanAddStandard()
+                if standards.length > 0 || (!isAdminAnnouncement && announcement.isCanAddStandard())
                     .add-standards-container
                         .add-standards
                             .standards-list
-                                standards = announcement.getStandards() || []
                                 each standard in standards
                                     BUTTON(data-tooltip = standard.getDescription()).grey-button.same-on-hover
                                         = standard.getName()
                                         if !disableDeleteBtn
                                             +ActionLink('announcement', 'removeStandard', announcement.getId(), standard.getStandardId()).remove-standard
+                        if !isAdminAnnouncement && announcement.isCanAddStandard()
                             .title=Msg.Click_to_add_standard
                             +ActionLink('announcement', 'showStandards', announcement.getAnnouncementTypeName(), announcement.getId(), classId).add-standards-btn.x-hidden
                 .drawer-icon
