fixed demo app installs

--- a/Chalkable.Web/Views/DemoSchool/Index.cshtml
+++ b/Chalkable.Web/Views/DemoSchool/Index.cshtml
@@ -68,7 +68,7 @@
                 {
                     switch (item.Name) 
                         {
-                        case "AdminGrade": <a class="Admin" href='LogOnIntoDemo.json?rolename=AdminGrade&prefix=@ViewData[ViewConstants.DEMO_PREFIX_KEY]'></a>; break;
+                        case "AdminGrade": <a class="Admin" href="javascript:void(0)"></a>; break;
                         case "Teacher":
                         case "Student": <a class="@item.Name" href='LogOnIntoDemo.json?rolename=@item.Name&prefix=@ViewData[ViewConstants.DEMO_PREFIX_KEY]'></a>; break;
                         }
