--- a/Chalkable.Web/assets/sass2/teacher.sass
+++ b/Chalkable.Web/assets/sass2/teacher.sass
@@ -6,5 +6,8 @@
 @import "4_pages/feed-list"
 @import "4_pages/announcement-view-page"
 @import "4_pages/announcement-form-page"
+@import "4_pages/app-market-page"
+@import "4_pages/my-apps-page"
+@import "4_pages/app-market-details"
 
 @import "5_dialogs/add-standards-dialog"
