--- a/Chalkable.Web/assets/jade/activities/apps/AppMarketApps.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/AppMarketApps.jade
@@ -1,14 +1,10 @@
 mixin AppIconLink(app)
     appId = app.getId().valueOf()
-    +ActionLink('appmarket', 'details', appId).app-icon-link
-        .app-list-item
-            .icon
-                pictureUrl = self.getAppPictureURL(app.getSmallPictureId(), 74, 74)
-                img(src=pictureUrl)
-            .description
-                .name=app.getName()
-                .shortdesc=app.getShortDescription()
-
+    +ActionLink('appmarket', 'details', appId).application
+        img(src=self.getAppPictureURL(app.getSmallPictureId(), 74, 74))
+        .title=app.getName()
+        .shortdesc=app.getShortDescription()
+        BUTTON.blue-button Quick Install
 
 
 each app in self.getApps().getItems()
