--- a/Chalkable.Web/assets/jade/activities/apps/AppMarketBase.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/AppMarketBase.jade
@@ -1,18 +1,18 @@
 mixin AppMarketToolbar(balance, categories, gradelevels, isStore, needsStoreBtn)
-    .action-bar.not-transparent.buttons
-        .container.panel-bg.buttons-toolbar
-            storeBtnCls = needsStoreBtn ? "pressed-app-store" : "pressed"
-            if balance
-                .user-balance= "$" + balance
-            if balance
-               -storeBtnCls += " with-balance"
-            +ActionLink('appmarket', 'list')(class = isStore ? storeBtnCls : "").app-store.toolbar-btn App Store
+    if balance
+        .buttons
+            BUTTON.user-balance= "$" + balance
+
+    h2.page-title Apps
+    .action-bar
+        .items
             +ActionLink('appmarket', 'myApps').my-apps.toolbar-btn My Apps
-            //+ActionLink('funds', 'view')(class = isStore ? "" : "pressed").toolbar-btn App Funds
-            +ActionForm('', '')
-                +SearchBox(chlk.services.AppMarketService, "getAppsByFilter",
-                chlk.templates.apps.AppMarketSearchBoxTpl)#app-market-searchbox.market-search-box(name="appMarketSearch", triggerBtnId="app-market-search-btn")
-                button(type="submit").search-btn#app-market-search-btn
+            +ActionLink('appmarket', 'list').app-store.toolbar-btn.pressed App Store
+    //+ActionLink('funds', 'view')(class = isStore ? "" : "pressed").toolbar-btn App Funds
+    //+ActionForm('', '')
+        +SearchBox(chlk.services.AppMarketService, "getAppsByFilter",
+        chlk.templates.apps.AppMarketSearchBoxTpl)#app-market-searchbox.market-search-box(name="appMarketSearch", triggerBtnId="app-market-search-btn")
+        button(type="submit").search-btn#app-market-search-btn
 
 
 
