--- a/Chalkable.Web/assets/sass2/student.sass
+++ b/Chalkable.Web/assets/sass2/student.sass
@@ -5,3 +5,6 @@
 
 @import "4_pages/feed-list"
 @import "4_pages/announcement-view-page"
+@import "4_pages/app-market-page"
+@import "4_pages/my-apps-page"
+@import "4_pages/app-market-details"
