--- a/Chalkable.Web/assets/jade/controls/feed-item.jade
+++ b/Chalkable.Web/assets/jade/controls/feed-item.jade
@@ -36,6 +36,6 @@ mixin FeedItem(item, disabled)
                             p.animated
                                 span.title=item.getTitle() + ' '
                                 |#{item.getShortContent()}
-                            .animated=item.getExpiresDate().toString('m/d/y')
+                            .animated=item.getExpiresDate() ? item.getExpiresDate().toString('m/d/y') : ''
                             div(data-tooltip=Msg.Document_Attached).attachment-icon
                             div(data-tooltip=(item.getApplicationsCount() == 1 ? item.getApplicationName() : Msg.Application(true)) + ' ' + Msg.Attached).apps-icon
