--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/MonthPage.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/MonthPage.jade
@@ -1,4 +1,4 @@
-div
+.calendar-page
     actions = {currentAction: 'month', day: 'day', week: 'week', month: 'month'}
     obj = self.getDataForToolBar()
     param = obj.selectedItemId || obj.selectedIds
