--- a/Chalkable.Web/assets/sass2/_shared.sass
+++ b/Chalkable.Web/assets/sass2/_shared.sass
@@ -29,6 +29,7 @@
 @import "3_molecules/chlk-grid"
 @import "3_molecules/dialog"
 @import "3_molecules/loader-container"
+@import "3_molecules/calendar"
 
 @import "6_popups/list-new-popup"
 
