--- a/Chalkable.Web/assets/sass2/3_molecules/_calendar.sass
+++ b/Chalkable.Web/assets/sass2/3_molecules/_calendar.sass
@@ -101,7 +101,8 @@
       border-color: #13495c
       background: #2f7790
       color: #fff
-      +text-shadow(transparentize(#fff, .5) 0 1px 0)
+      &, *
+        +text-shadow(none)
 
 
     .week-day
