--- a/Chalkable.Web/assets/sass2/student.sass
+++ b/Chalkable.Web/assets/sass2/student.sass
@@ -8,3 +8,4 @@
 @import "4_pages/app-market-page"
 @import "4_pages/my-apps-page"
 @import "4_pages/app-market-details"
+@import "4_pages/students-list"
