--- a/Chalkable.Web/assets/jade/activities/people/UsersForGrid.jade
+++ b/Chalkable.Web/assets/jade/activities/people/UsersForGrid.jade
@@ -20,7 +20,7 @@ each item, i in self.getItems()
             +UserName(item)
         .right
             +ActionLinkButton('message', 'sendToPerson', null, item.getId(), item.getFirstName(), item.getLastName()).message-button.blue-gradient-btn Message
-        .clear
+        .clear-fix
 
 
     //if self.isHasAccess()
