--- a/Chalkable.Web/assets/jade/activities/people/UsersList.jade
+++ b/Chalkable.Web/assets/jade/activities/people/UsersList.jade
@@ -1,19 +1,22 @@
 -users=self.getUsers()
 -selectedIndex = self.getSelectedIndex();
 .people-list-container.not-transparent
-    .top.panel-bg
-        span.total-count=self.getTotalText()
-    .action-bar.buttons.filter
-        .container.panel-bg
-            .left
-                A(class=self.isByLastName()?"":"pressed", data-value="false").action-button.first-last First name
-                A(class=self.isByLastName()?"pressed":"", data-value="true").action-button.first-last Last name
-                input(type="hidden", name="byLastName", value=(self.isByLastName() ? 'true' : 'false'))
-            .right
-                input(placeholder='Filter list...', name="filter", value=self.getFilter()).people-search
-                .people-search-imgs
-                    label.people-search-img
-                    label.people-search-close.opacity0
+    .buttons
+        .right
+            BUTTON.total-count= self.getTotalText()
+
+    .buttons.filter
+        .left
+            .buttons-group
+                BUTTON(class=self.isByLastName()?"":"pressed", data-value="false") First name
+                BUTTON(class=self.isByLastName()?"pressed":"", data-value="true") Last name
+            input(type="hidden", name="byLastName", value=(self.isByLastName() ? 'true' : 'false'))
+        .right
+            input(placeholder='Filter list...', name="filter", value=self.getFilter()).people-search
+            .people-search-imgs
+                label.people-search-img
+                label.people-search-close.opacity0
+        .clear-fix
     .grid-container.loader-container
         +RenderWith(self.getModel(), chlk.templates.people.UsersGridTpl)(
             userRole = self.getUserRole(),
