--- a/Chalkable.Web/assets/sass2/1_quarks/_button.sass
+++ b/Chalkable.Web/assets/sass2/1_quarks/_button.sass
@@ -44,6 +44,9 @@ button, input[type=button], input[type=submit], input[type=reset], input[type="f
     cursor: default
 
 
+  &.pressed, &.pressed:hover, &:active
+    +box-shadow(transparentize(#000, .79) 0 1px 5px inset, #fff 0 1px 0)
+    background-color: #fff
 
 .file
   position: relative
