--- a/Chalkable.Web/assets/sass2/2_atoms/_buttons.sass
+++ b/Chalkable.Web/assets/sass2/2_atoms/_buttons.sass
@@ -14,3 +14,16 @@
       width: 24px
       height: 24px
       +icons-sprite(back-arrow)
+
+
+.buttons-group
+  button, input[type=button], input[type=submit], input[type=reset]
+    border-radius: 0
+
+    &:first-child
+      border-top-left-radius: 3px
+      border-bottom-left-radius: 3px
+
+    &:last-child
+      border-top-right-radius: 3px
+      border-bottom-right-radius: 3px
