--- a/Chalkable.Web/assets/sass2/teacher.sass
+++ b/Chalkable.Web/assets/sass2/teacher.sass
@@ -9,5 +9,6 @@
 @import "4_pages/app-market-page"
 @import "4_pages/my-apps-page"
 @import "4_pages/app-market-details"
+@import "4_pages/students-list"
 
 @import "5_dialogs/add-standards-dialog"
